# Core_Math_Library

./: .gitignore  .gitmodules
cpp_syntax/: 00-template-void.cc
cuda/: get_cudnn_version.cu  ldmatrix.cu  warp_reduce.cu
cuda/conv_fp16/: CMakeLists.txt  README.md  build.sh  cudnn.cu  cutlass.cu  cutlass_depthwise.cu  cutlass_leaky_relu.cu  cutlass_relu.cu  cutlass_residual.cu  cutlass_silu.cu  cutlass_simt.cu  depthwise.cu  group_conv.cu  implicit_gemm.cu  implicit_gemm.md  main.cu  my.cu  my_conv.md  my_depthwise_conv2d.cu  naive_conv_gpu.cu  test.cu  utility.cu  utility.h
cuda/conv_fp32/: README.md  build.sh  cutlass.cu  test.cu  utility.cu  utility.h
cuda/experiment/: 01-__shfl_xor_sync.cu  README.md  shared_memory.cu
cuda/gemv/: CMakeLists.txt  gemv.cu
cuda/groupnorm_fp16/: CMakeLists.txt  README.md  main.cu  nchw32_cuda.cu  utility.cu  utility.h
cuda/hgemm/: CMakeLists.txt  README.md  build.sh  cutlass.cu  gemm.cu  gemmWithBroadcast.cu  main.cu  naive_block_combine_access.cu  naive_block_gemm.cu  naive_gemm.cu  test.cu  utility.cu  utility.h  wmma.cu
cuda/igemm/: CMakeLists.txt  IGemmWithBroadcast.cu  README.md  cublas.cu  cutlass.cu  cutlass_sm75.cu  cutlass_sm80.cu  main.cu  utility.cu  utility.h
cuda/layernorm_fp16/: README.md  main.cu  nchw_cuda.cu  utility.cu  utility.h
cuda/layout/: CMakeLists.txt  README.md  build.sh  copy.cu  cutlass.cu  cutlass_iter.cu  main.cu  my.cu  my_naive.cu  my_optimize0.cu  my_optimize1.cu  out.txt  test.cu  utility.cu  utility.h
cuda/microbenchmark/: cuda_core_bf16.cu  cuda_core_fp32.cu  l2cache_bandwidth.cu
cuda/reduce/: reduce.cu  warp_reduce.cu
cuda/sgemm/: A.cu  CMakeLists.txt  README.md  build.sh  cublas.cu  cutlass.cu  cutlass_vs_cublas.cu  gemm.cu  main.cu  matmul_gpu_naive.cu  megengine.cu  mma.cu  naive_block_combine_access.cu  naive_block_gemm.cu  naive_gemm.cu  test.cu  tf32.cu  utility.cu  utility.h  wmma.cu
cuda/tools/: README.md
cuda/two_conv2d_fusion/: CMakeLists.txt  conv_bias.cu  main.cu  utility.cu  utility.h
cuda/uint_to_xiaoshu/: fast_uint32_to_16bf16.cu  fast_uint32_to_16bf16_prmt.cu  fast_uint32_to_4fp16.cu  fast_uint32_to_8bf16.cu
cutlass_examples/: basic_split_gemm.cu  fc_relu.cu  use_library.cu
cutlass_examples/cute/: 00-print_tAgA.cu  01-print_smem_layout.cu  02-g_to_s.cu  03-ok_in_3.2_error_in_3.4.cu  04-printlaytex-MMA.cu  05-print-G2SCopy.cu  A.cu  CMakeLists.txt  demo_shengying.cu  issue_1.cu  naive_cute_gemm.cu  sgemm_1.cu  shape_stride_layout.cu  tiled_copy.cu  zeroine_copy.cu
cutlass_examples/iterator/: CMakeLists.txt  PitchLinearStripminedThreadMap.cu  PitchLinearTilePolicyStripminedThreadStrided.cu  PitchLinearWarpRakedThreadMap.cu  PitchLinearWarpStripedThreadMap.cu  PredicatedTileIterator_PitchLinearStripminedThreadMa.cu  PredicatedTileIterator_PitchLinearStripminedThreadMap.cu  PredicatedTileIterator_PitchLinearWarpRakedThreadMap.cu  TensorOpMultiplicand.cu  TransposePitchLinearThreadMap.cu  TransposePitchLinearThreadMapSimt.cu
cutlass_fp16_int8/: main.cu
cutlass_fp16_int8/cutlass_extensions/: compute_occupancy.h  epilogue_helpers.h  ft_gemm_configs.h
cutlass_fp16_int8/cutlass_kernels/: cutlass_heuristic.h
cutlass_fp16_int8_from_cutlass/: CMakeLists.txt  main.cu
cutlass_fp16_int8_from_cutlass/cutlass_extensions/: tile_interleaved_layout.h
cutlass_fp16_int8_from_cutlass/cutlass_extensions/epilogue/thread/: ft_fused_activations.h
cutlass_fp16_int8_from_cutlass/cutlass_extensions/epilogue/threadblock/: epilogue_per_row_per_col_scale.h  epilogue_tensor_op_int32.h
cutlass_fp16_int8_from_cutlass/cutlass_extensions/gemm/kernel/: fpA_intB_gemm.h
cutlass_fp16_int8_from_cutlass/cutlass_extensions/gemm/threadblock/: default_mma.h  default_mma_bf16.h  dq_mma_base.h  dq_mma_multistage.h
cutlass_fp16_int8_from_cutlass/cutlass_extensions/gemm/warp/: mma_tensorop_dequantizer.h
cutlass_fp16_int8_from_cutlass/cutlass_kernels/: cutlass_heuristic.h
cutlass_fp16_int8_from_cutlass/cutlass_kernels/fpA_intB_gemm/: fpA_intB_gemm.h  fpA_intB_gemm_template.cu
cutlass_fp16_int8_from_cutlass/utils/: cuda_utils.h
issue/: CMakeLists.txt  main.cu
nccl/: A.cu
numba/: 00-vec-add.py
nvshmem/: copy.cu  test.cu  test.sh
paddle/: 01-many-mmha.py  03-make_print_in_static_model.py  04-variable_vs_memory_efficient_attn.py  05-print-static-model.py  all2all.py  einops.py  masked_multihead_attention.py  matmul.py  scatter_nd.py  send_receive.py
python/: 01-read-json.py
stock/: buy_sell.py
(+17 files in other folders)
